package com.travelmate.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.travelmate.entity.AiChat;
import org.apache.ibatis.annotations.Mapper;

@Mapper
public interface AiChatMapper extends BaseMapper<AiChat> {
}
