package com.travelmate.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.travelmate.entity.AiPlan;
import org.apache.ibatis.annotations.Mapper;

@Mapper
public interface AiPlanMapper extends BaseMapper<AiPlan> {
}
